Exercise 2 | Linear Regression

--- a/Exercise2.ipynb
+++ b/Exercise2.ipynb
@@ -1322,6 +1322,31 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import r2_score\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "print(r2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "la0z7IDSb5m6",
+        "outputId": "659da97e-9682-4f86-a4f0-95b0e5bc5056"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.955306313804495\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
